fixed icon cropping and quotation spacing issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 .top-half {
-  padding: 40px 0 40px 0;
+  padding: 40px 0 20px 0;
 }
 
 #avatar {
@@ -134,6 +134,8 @@ a:active {
 
 #open-quote {
   display: inline-block;
+  padding-top: 6px;
+  padding-left: 8px;
   color: black;
   margin-right: 6px;
   font-size: 60px;
@@ -141,34 +143,39 @@ a:active {
   vertical-align: bottom;
 }
 
+#close-quote-container {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+}
+
 #close-quote {
   display: inline-block;
+  padding-right: 8px;
   text-align: right;
-  height: 10px;
   color: black;
   font-style: normal;
   font-size: 60px;
-  margin-top: 20px;
-  padding-left: 10px;
-  line-height: 0.4;
+  line-height: 0;
 }
 
 #quote {
   display: inline-block;
-  max-width: 550px;
+  max-width: 400px;
   vertical-align: middle;
   margin: 10px 10px 4px 10px;
   padding: 2px;
   color: black;
-  text-align: left;
-  font-size: 28px;
+  line-height: 1.3;
+  text-align: justify-all;
+  font-size: 30px;
   font-style: italic;
   letter-spacing: 0.02em;
 }
 
 #citation {
   display: block;
-  margin: 10px 10px 0 0;
+  margin: 18px 10px 0 0;
   font-size: 22px;
   text-align: right;
   color: black;
@@ -224,12 +231,17 @@ h3 {
   display: inline-block;
 }
 
+.links a {
+  font-size: 1.2rem;
+}
+
 .links a .fas, .links a .fab {
   background: #9D50BB;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to top, #6E48AA, #9D50BB);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to top, #6E48AA, #9D50BB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 0 0.4rem;
   font-size: 1.2rem;
+  line-height: 1.3rem;
   color:transparent;
   -webkit-background-clip: text;
   background-clip: text;
@@ -345,18 +357,20 @@ h3 {
   }
 
   #open-quote {
-    font-size: 36px;
+    font-size: 48px;
+  }
+
+  #close-quote-container {
+
   }
 
   #close-quote {
-    font-size: 36px;
-    /* padding-left: 6px; */
-    /* height: 20px; */
+    font-size: 48px;
     line-height: 0.0;
   }
 
   #quote {
-    font-size: 24px;
+    font-size: 26px;
   }
 
   #citation {
